# compose-message

./: LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: ruff.yml
docs/: cli.ja.md  cli.md  config.ja.md  config.md  errors.ja.md  errors.md  prompt.ja.md  prompt.md
src/compose_message/: __init__.py  cli.py
src/compose_message/commands/: __init__.py  draft.py  init.py
src/compose_message/core/: __init__.py  config.py  git.py  prompt.py
src/compose_message/providers/: __init__.py  ollama.py
