[project]
name = "compose-message"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shou-taro", email = "rhyme.remedy-5k@icloud.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/compose_message"]
