[project]
name = "compose-message"
version = "0.1.0"
description = "Compose commit messages from staged diffs using LLMs."
authors = [
    { name = "shou-taro", email = "rhyme.remedy-5k@icloud.com" }
]
dependencies = [
    "questionary>=2.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
git-compose = "compose_message.cli:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.14.11",
    "pytest>=9.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/compose_message"]

[tool.ruff]
# Maximum line length per line
# Using 88 keeps it compatible with Ruff formatter and Black defaults
line-length = 88

# The minimum Python syntax version this project targets
target-version = "py311"

# Directories to exclude from linting and formatting
# Virtual environments, build artefacts, and distribution outputs
# should not be checked by Ruff
exclude = [".git", ".venv", "dist", "build", "__pypackages__",]

[tool.ruff.lint]
# Enabled rule groups:
# - E: Clear formatting and syntax errors (pycodestyle)
# - F: Likely bugs such as unused imports or undefined names (pyflakes)
# - I: Automatic import ordering (isort equivalent)
# - UP: Upgrade older Python syntax to modern equivalents (pyupgrade)
select = ["E", "F", "I", "UP"]

# __init__.py files are commonly used to re-export public APIs.
# In such cases, imports may appear unused within the file itself.
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.format]
# Use double quotes for string literals
quote-style = "double"

# Use spaces for indentation (no tabs)
indent-style = "space"

# Match Black-compatible behaviour for trailing commas
skip-magic-trailing-comma = false

# Automatically choose the appropriate line ending
# for the current operating system
line-ending = "auto"

[tool.pytest.ini_options]
# Directories that pytest will search for tests
# Limiting discovery to `tests/` keeps test runs predictable
# and avoids accidentally collecting example or utility files
# elsewhere in the repository
testpaths = ["tests"]

# Custom markers used to categorise tests
# - unit: fast, isolated tests with no external dependencies
# - e2e: end-to-end tests that execute the CLI as a subprocess
# Markers make it easy to select or exclude test groups
# (e.g. `pytest -m unit`)
markers = [
  "unit: fast, isolated tests",
  "e2e: executes the CLI as a subprocess",
]

# Additional default options passed to pytest
# -q: quiet output, showing only essential information
# --disable-warnings: suppress warning output to keep logs readable
addopts = [
  "-q",
  "--disable-warnings",
]
